--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
 aiogram==2.25.1
-numpy
-pandas
-python-dotenv
-tinkoff-invest==1.0.5
-requests
-scikit-learn
-joblib
+aiohttp==3.8.6          # ← совместимо с aiogram 2.25.1
+fastapi==0.110.0
+joblib==1.4.0
+matplotlib==3.8.4
+numpy==1.26.4
+openai==1.30.1
+pandas==2.2.2
+python-dotenv==1.0.1
 python-telegram-bot==13.15
-aiohttp
-matplotlib
-fastapi
-uvicorn
-websockets
-openai
+requests==2.31.0
+scikit-learn==1.4.2
+tinkoff-invest==1.0.5
+uvicorn==0.29.0
+websockets==12.0
